[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bing-scraper"
version = "0.2.0"
description = "Free Bing search MCP server for Claude Code - No API key required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bing Search MCP Contributors"}
]
keywords = ["mcp", "bing", "search", "claude", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/iridite/bing-search-mcp"
Repository = "https://github.com/iridite/bing-search-mcp"
Issues = "https://github.com/iridite/bing-search-mcp/issues"

[project.scripts]
bing-search-mcp = "bing_search_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bing_search_mcp"]
